github link added

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,5 +4,8 @@
         <input type="password" id="api-key" placeholder="Enter your API key" required>
         <button type="submit">Login</button>
         <p id="login-error" class="error-message">Invalid API Key</p>
+        <div style="margin-top: 20px;">
+            <a href="https://github.com/necrolingus/dynamic_endpoints" target="_blank" class="github-link">View on GitHub</a>
+        </div>
     </form>
 </div>
